# syntax-shap

./: .gitignore  README.md  jobs.out  pyproject.toml  requirements.txt  setup.cfg
clutils/: main.py
notebooks/: Computation_Time.ipynb  Next Token Syntax Explanations.ipynb  Prepare Results.ipynb  Scores_Visualization.ipynb  Scores_Visualization_GPT2.ipynb  Scores_Visualization_Mistral.ipynb  Semantic_Analysis.ipynb  Sensitivity_Analysis.ipynb  ShapleyValuesSampling.ipynb  Test.ipynb
results/: invalid_ids.npy  invalid_ids.pkl  invalid_inputs.npy  invalid_inputs.pkl
results/loss_dist/: shap_values_dtree.pkl  shap_values_dtree_weighted.pkl  shap_values_partition.pkl  shap_values_r-dtree.pkl
results/loss_prob/: shap_values_dtree.pkl  shap_values_dtree_weighted.pkl  shap_values_partition.pkl  shap_values_r-dtree.pkl  shap_values_r-dtree_weighted.pkl
shap2/: __init__.py  _explanation.py  baselines.py  datasets.py  evaluate.py  evaluation.py  explain.py  main.py  metrics.py  predictions.py  statistics.py  test.py  test_model.py
shap2/benchmark/: _explanation_error.py  _sequential.py
shap2/explainers/: __init__.py  _dependency.py  _exact.py  _explainer.py  _gpu_tree.py  _partition.py  _permutation.py  _syntax.py
syntaxshap/: __init__.py  _explanation.py  computation_time.py  datasets.py  embeddings.py  explain.py  main.py  metrics.py  model.py  predictions.py  save_predictions.py  save_statistics.py  search.py  statistics.py  svsampling.py  test.py
tests/: import.py  test_args.py  test_datasets.py  test_explanation.py  test_install.py  test_main.py
(+94 files in other folders)
