[metadata]
name = syntaxshap
version = 0.1
authors = [
    {name = "Kenza Amara", email = "kenza.amara@ai.ethz.ch"},
    {name = "Rita Sevestjanova", email = "rita.sevastjanova@inf.ethz.ch"},
    {name = "Mennatallah El-Assady", email = "menna.elassady@ai.ethz.ch"}

]
description = library of functions to integrate syntactic dependencies into shap-based method
readme = "README.md"
classifiers = 
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pandas
    scikit-learn
    shap
    spacy
    tqdm
[options.packages.find]
where = src


[project.urls]
Homepage = "https://github.com/k-amara/syntax-shap"
Issues = "https://github.com/k-amara/syntax-shap/issues"
